frontend/src/app/modules/home/issues/issue-details/issue-details-page/issue-details-page.component.sass
@import src/styles/variables
@import src/styles/mixins

.issue-details-header
    @include background-gray
    @include title
    display: flex
    align-items: center
    justify-content: flex-start
    white-space: nowrap

    .back-button
        margin-right: .2em
        border: none
        border-radius: 100%
    h2
        @include text-overflow-nowrap
        max-width: 450px
        cursor: default

.issue-details-content
    padding: $half-indent

    ::ng-deep .tabview
        .p-tabview-panels
            padding-bottom: 0

        .p-tabview-nav
            flex-wrap: nowrap
            white-space: nowrap

